@@ -27,8 +27,7 @@
 	<!-- add this until FELIX-390 gets fixed -->
 	<spring.osgi.import.pkg>
 	 org.apache.commons.logging*,
-	 org.osgi.service.packageadmin;version=1.2,
-	 org.xml.sax;resolution:=optional
+	 org.osgi.service.packageadmin;version=1.2
 	</spring.osgi.import.pkg>
 	<spring.osgi.symbolic.name>${symName.prefix}.extender</spring.osgi.symbolic.name>
   </properties>
